--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ Requires at least: 4.9.6
 Requires PHP: 5.2.4
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: Adityathok
+Text Domain: mjlah
 Tags: one-column, two-columns, three-columns, left-sidebar, right-sidebar, custom-background, custom-logo, custom-menu, featured-images, footer-widgets, full-width-template, theme-options, translation-ready
 
 Resource Licenses:
